# Graphics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: geometry.hpp  render.hpp
include/Graphics/: camera.hpp  collision.hpp  geometry.hpp  georender.hpp  gmath.hpp  hash.hpp  input.hpp  log.hpp  model.hpp  render.hpp  shader.hpp  text.hpp  texture.hpp  window.hpp
lib/GLFW/docs/: Doxyfile.in
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/shaders/: load_model.glsl  test.glsl  text.glsl
src/: camera.cpp  collision.cpp  geometry.cpp  georender.cpp  gl.cpp  hash.cpp  input.cpp  model.cpp  practice.cpp  render.cpp  shader.cpp  text.cpp  texture.cpp  window.cpp
tests/: CMakeLists.txt  Geo_Init_Test.cpp  LinSeg_Dist_Test.cpp  LinSeg_Inter_Test.cpp  Line_Dist_Test.cpp  Line_Inter_Test.cpp  Plane_Dist_Test.cpp  Plane_Inter_Test.cpp  Point_Dist_Test.cpp  Point_Inter_Test.cpp  Polygon_Dist_Test.cpp  Polygon_Inter_Test.cpp  Polyhedron_Dist_Test.cpp  Polyhedron_Inter_Test.cpp
tests/geometry/: CMakeLists.txt  Geo_Init.cpp  Line_Dist.cpp  Plane_Dist.cpp  Point_Inter.cpp  Polygon_Dist.cpp  Polygon_Inter.cpp  Polyhedron_Inter.cpp
tests/rendering/: CMakeLists.txt  Visual_Init.cpp
